--- a/src/main/webapp/css/main.less
+++ b/src/main/webapp/css/main.less
@@ -107,13 +107,9 @@ ul#menu {
             text-decoration: none;
             transition: 0.3s;
 
-            &.active {
-                background-color: @dark-blue;
-                color: white;
-            }
-
             &.setting {
                 background-color: @main-blue;
+                &.active,
                 &:hover {
                     background-color: #246EB9;
                 }
@@ -121,6 +117,7 @@ ul#menu {
 
             &.information {
                 background-color: @gray;
+                &.active,
                 &:hover {
                     background-color: @charcoal;
                 }
@@ -262,14 +259,7 @@ li.legend {
 .stats {
     float: left;
     padding: 10px;
-    width: @width3;
-}
-
-.stat_category {
-    background-color: @gray;
-    color: black;
-    padding: 5px 40px 5px 5px;
-    text-align: right;
+    width: @half-page - 45px;
 }
 
 #pagetop_spacer {
@@ -327,4 +317,14 @@ td {
     border-bottom: 1px solid @color4;
     padding-bottom: 5px;
     padding-top: 5px;
+}
+
+#statistics {
+
+    h3 {
+        background-color: #eee;
+        color: black;
+        padding: 10px;
+        margin-top: 0;
+    }
 }
