--- a/src/main/webapp/templates/frame/footer.html
+++ b/src/main/webapp/templates/frame/footer.html
@@ -1,36 +1,5 @@
 <div id="footer">
-	<div class="container">
-		<div id="affiliations">
-			<h4>Affiliations</h4>
-			<ul id="affiliations_list">
-				<li><a
-					href="http://icahn.mssm.edu/research/labs/maayan-laboratory"
-					target="_blank">The Ma'ayan Lab</a></li>
-				<li><a href="http://www.lincs-dcic.org/" target="_blank">BD2K-LINCS
-						Data Coordination and Integration Center (DCIC)</a></li>
-				<li><a href="http://www.lincsproject.org/">NIH LINCS
-						program</a></li>
-				<li><a href="http://bd2k.nih.gov/" target="_blank">NIH Big
-						Data to Knowledge (BD2K)</a></li>
-				<li><a href="https://commonfund.nih.gov/idg/index"
-					target="_blank">NIH Illuminating the Druggable Genome (IDG)
-						Program</a></li>
-				<li><a href="http://icahn.mssm.edu/" target="_blank">Icahn
-						School of Medicine at Mount Sinai</a></li>
-			</ul>
-		</div>
-		<div id="social_media">
-
-			<!-- Go to www.addthis.com/dashboard to customize your tools -->
-			<div id="social_buttons" class="addthis_sharing_toolbox"></div>
-
-		</div>
-	</div>
-	<div class="clear"></div>
-	<br>
-
-	<div>
-		<h4>Updated from</h4>
+	<div id="citations">
 		<a href="http://www.ncbi.nlm.nih.gov/pubmed/22080467"> Chen EY, Xu
 			H, Gordonov S, Lim MP, Perkins MH, Ma'ayan A. Expression2Kinases:
 			mRNA Profiling Linked to Multiple Upstream Regulatory Layers.
