--- a/src/main/webapp/css/results.css
+++ b/src/main/webapp/css/results.css
@@ -12,7 +12,11 @@
 	left: 50%;
  */}
 
-button {
+#x2k-button,
+#chea-button,
+#g2n-button,
+#kea-button
+{
 	position: relative;
 	display: inline-block;
 	float: left;
@@ -29,11 +33,19 @@ button {
 }
 
 button.selected {
-	background-color: #0f0f0f;
+	background-color: #a0a0a0;
 	box-shadow: inset 0 0 0 1000px rgba(0,0,0,.0);
 }
 
 #results {
 	display: inline-block;
 	float:left;
+}
+
+#download-button{
+	width: 180px;
+    background-color: #eee;
+    border: 1px solid #ddd;
+    border-radius: 2px;
+    cursor: pointer;
 }
