Nicer file upload button

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -235,6 +235,32 @@ li.legend {
 	position: relative;
 }
 
+/*File input hidden button*/
+.inputfile {
+  /* visibility: hidden etc. wont work */
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+}
+.inputfile:focus + label {
+  /* keyboard navigation */
+  outline: 1px dotted #000;
+  outline: -webkit-focus-ring-color auto 5px;
+}
+.inputfile + label * {
+  pointer-events: none;
+}
+
+#download-label{
+	background-color: #eee;
+    border: 1px solid #ddd;
+    border-radius: 2px;
+    font-size: 12px;
+}
+
 /* accordion */
 button.accordion {
     background-color: #fff;
