--- a/src/main/webapp/css/bargraph.css
+++ b/src/main/webapp/css/bargraph.css
@@ -32,6 +32,11 @@ svg {
 	height: 500px;
 }
 
+.bargraph-chea {
+	width: 960px;
+	height: 500px;
+}
+
 text {
 	font: 12px sans-serif;
 	color: white;
