--- a/src/main/webapp/templates/frame/header.html
+++ b/src/main/webapp/templates/frame/header.html
@@ -1,4 +1,11 @@
 <div id="logo">
-	<a href="/X2K"> <img src="http://localhost:8080/X2K/resources/logo.png" />
+	<a href="/X2K"> <img src="http://localhost:8080/X2K/resources/logo.png"/>
 	</a>
 </div>
+			<div>
+				<ul id="menu">
+					<li><a href="#x2k" class="setting tab-link">X2K</a></li>
+					<li><a href="#downloads" class="information tab-link">Downloads</a></li>
+					<li><a href="#help" class="information tab-link">Help</a></li>
+				</ul>
+			</div>
