--- a/src/main/webapp/css/bargraph.css
+++ b/src/main/webapp/css/bargraph.css
@@ -1,11 +1,12 @@
-body {
+/* body {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	width: 960px;
 	height: 500px;
 	position: relative;
-}
+} */
 
-svg {
+#bargraph-chea > svg,
+#bargraph-kea > svg {
 	width: 100%;
 	height: 100%;
 	position: center;
