--- a/src/main/webapp/css/results.css
+++ b/src/main/webapp/css/results.css
@@ -1,16 +1,9 @@
-.buttons-panel {
-	
+#page {
+	border: 1px solid #ddd;
+	margin: 20px auto;
+	padding: 20px;
+	width: 1230px;
 }
-
-#buttons-panel {
-/* 	position: fixed;
-	width: 160px;
-	height: 640px;
-	margin-left: -320px;
-	bottom: 0px;
-	right: 25%;
-	left: 50%;
- */}
 
 #x2k-button,
 #chea-button,
@@ -45,9 +38,9 @@ button.selected {
 #kea-table
 {
  	border-collapse: collapse;
-	/* border: none; */
-	width: 1024px;
-	height: 450px;
+	border: none;
+	width: 100%;
+	height: 100%;
 }
 
 
@@ -57,19 +50,25 @@ button.selected {
 
 th {
 	border-bottom: 1px solid #dddddd;
+	background-color: #fff;
 	padding-bottom: 5px;
 	padding-top: 5px;
+}
+
+tr:nth-child(odd) {
+	background-color: #f1f1f1;
 }
 
 td
 {
     text-align: left;
+    padding-left: 5px;
 }
 
 td + td {
-	border-bottom: 1px solid #dddddd;
 	padding-bottom: 5px;
 	padding-left: 15px;
+	padding-right: 5px;
 	padding-top: 5px;
 	text-align: right;
 }
