--- a/src/main/webapp/css/results.css
+++ b/src/main/webapp/css/results.css
@@ -3,6 +3,7 @@
 	margin: 20px auto;
 	padding: 20px;
 	width: 1230px;
+	height: 930px;
 }
 
 #x2k-button,
@@ -15,18 +16,41 @@
 	float: left;
 	width: 150px;
 	height: 150px;
-	font-weight: bold;
 	color: #000000;
 	margin-right: 10px;
 	margin-bottom: 10px;
-	font-size: 36px;
+	font-size: 28px;
 	line-height: 1.25;
 	margin-top: 0;
 	box-shadow: inset 0 0 0 1000px rgba(0,0,0,.15);
 }
 
+/* Overwriting jQuery style*/
+
+.ui-state-active{
+	border: 1px solid #c5c5c5 !important;
+	border-bottom: 1px solid #fff !important;
+	background: #fff !important;
+	
+}
+
+.ui-widget-header {
+	border: none !important;
+    border-bottom: 1px solid #dddddd !important;
+    background: #fff !important;
+}
+
+#ui-id-1,
+#ui-id-2,
+#ui-id-3,
+#ui-id-4,
+#ui-id-5,
+#ui-id-6{
+	color: #000 !important;
+}
+
 button.selected {
-	background-color: #a0a0a0;
+	background-color:  #a0a0a0;
 	box-shadow: inset 0 0 0 1000px rgba(0,0,0,.0);
 }
 
