--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -41,10 +41,10 @@ input[type="file"] {
 }
 
 #page {
-	border: 1px solid #ddd;
 	margin: 20px auto;
 	padding: 20px;
-	width: 950px;
+	width: 1000px;
+	height: 600px;
 }
 
 #logo {
@@ -129,6 +129,7 @@ ul#menu li a.information.active, ul#menu li a.information:hover {
 
 #input-fields #example-gene-list {
 	margin-top: 10px;
+	width: 105px;
 }
 
 #input-fields #text-input {
@@ -154,7 +155,7 @@ ul#menu li a.information.active, ul#menu li a.information:hover {
 }
 
 #run-buttons button {
-	margin: 0 10px 10px 0;
+	margin: 10px 0 0 10px;
 	width: 50px;
 }
 
@@ -275,9 +276,11 @@ li.legend {
     padding-left: 5px;
     padding-right: 5px;
     padding-bottom: 3px;
+    margin-top: 10px;
+    margin-left: 10px;
     font-size: 11px;
 	width: 93px;
-    height: 12px;
+    height: 13px;
 }
 
 /* accordion */
