--- a/src/main/webapp/css/results.css
+++ b/src/main/webapp/css/results.css
@@ -1,9 +1,8 @@
 #page {
-	border: 1px solid #ddd;
 	margin: 20px auto;
 	padding: 20px;
 	width: 1230px;
-	height: 930px;
+	height: 800px;
 }
 
 #x2k-button,
@@ -14,11 +13,11 @@
 	position: relative;
 	display: inline-block;
 	float: left;
-	width: 150px;
-	height: 150px;
+	width: 140px;
+	height: 140px;
 	color: #000000;
-	margin-right: 10px;
-	margin-bottom: 10px;
+	margin-right: 5px;
+	margin-bottom: 5px;
 	font-size: 28px;
 	line-height: 1.25;
 	margin-top: 0;
@@ -49,6 +48,10 @@
 	color: #000 !important;
 }
 
+#button-panel{
+	height: 800px;
+}
+
 button.selected {
 	background-color:  #a0a0a0;
 	box-shadow: inset 0 0 0 1000px rgba(0,0,0,.0);
@@ -56,6 +59,7 @@ button.selected {
 
 #results {
 	display: table;
+	heigth: 800px;
 }
 
 #chea-table,
