--- a/src/main/webapp/templates/frame/header.html
+++ b/src/main/webapp/templates/frame/header.html
@@ -1,4 +1,4 @@
 <div id="logo">
-	<a href="/X2K"><img src="http://localhost:8080/X2K/resources/logo.png"/></a>
+	<a href="/X2K"><img src="resources/logo.png"/></a>
 	<p id="x2k_title">Expression to kinases</p>
 </div>
