Avi's cosmetic edits

--- a/src/main/webapp/templates/frame/footer.html
+++ b/src/main/webapp/templates/frame/footer.html
@@ -1,4 +1,5 @@
 <div id="footer">
+<p>Please cite this paper if you are using X2K for your publication:</p>
 	<div id="citations">
 		<a href="http://www.ncbi.nlm.nih.gov/pubmed/22080467"> Chen EY, Xu
 			H, Gordonov S, Lim MP, Perkins MH, Ma'ayan A. Expression2Kinases:
