--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -16,6 +16,15 @@ a:link, a:visited {
 	color: #0098ff;
 }
 
+#footer > p{
+	margin-bottom: 10px;	
+}
+
+#citations{
+	font-size: 12px;
+	margin: auto;
+}
+
 a:hover {
 	color: #026196;
 }
@@ -114,10 +123,10 @@ ul#menu li a.information.active, ul#menu li a.information:hover {
 }
 
 #input-fields .section-label, #run-buttons .section-label {
-	border-bottom: 1px solid #0098ff;
+/* 	border-bottom: 1px solid #0098ff; */
 	color: #0098ff;
 	font-family: 'Lato', sans-serif;
-	font-size: 20px;
+	font-size: 15px;
 	font-weight: 200;
 	margin: 10px 0;
 }
@@ -129,7 +138,7 @@ ul#menu li a.information.active, ul#menu li a.information:hover {
 
 #input-fields #example-gene-list {
 	margin-top: 10px;
-	width: 105px;
+	width: auto;
 }
 
 #input-fields #text-input {
@@ -150,13 +159,16 @@ ul#menu li a.information.active, ul#menu li a.information:hover {
 	width: 350px;
 }
 
-#run-buttons {
+/* #run-buttons {
 	width: 370px;
-}
+} */
 
 #run-buttons button {
 	margin: 10px 0 0 10px;
-	width: 50px;
+	width: auto;
+	background-color: #2baaff;
+	color: white;
+	border: 2px solid #4cb7ff;
 }
 
 #footer {
@@ -333,14 +345,14 @@ div.panel.show {
 }
 
 #acc_settings:after {
-    content: 'Settings	+';
+    content: 'Advanced settings	+';
     font-size: 13px;
     float: right;
     margin-left: 5px;
 }
 
 #acc_settings.active:after {
-    content: "Settings	-";
+    content: "Advanced settings	-";
 }
 
 #acc_x2k:after {
