--- a/src/main/webapp/templates/help/api.html
+++ b/src/main/webapp/templates/help/api.html
@@ -1,4 +1,4 @@
-<div id="api-header"><div id="api-method">POST</div><div id="api-endpoint">/api</div></div>
+<div id="api-header"><div id="api-method">POST</div><div id="api-endpoint">/api</div><div id="api-descr">Allows to POST data in multipart/form-data format and returns JSON with results for each type of analysis.</div></div>
 <table id="api-table">
 	<tbody>
 		<tr>
@@ -8,7 +8,7 @@
 		</tr>
 		<tr>
 			<td>text-genes</td>
-			<td>newline separated entrez ids</td>
+			<td>newline separated Entrez ids</td>
 			<td><textarea readonly rows=7 disabled>
 Nsun3
 Polrmt
@@ -399,7 +399,7 @@ C1d
 			<td>'both'</td>
 		</tr>				
 		<tr>
-			<td rowspan="4">included_database</td>
+			<td rowspan="4">included_database<div class="api-note">(choose one)</div></td>
 			<td>'ChEA 2015'</td>
 			<td rowspan="4">ChEA 2015</td>
 		</tr>
@@ -488,7 +488,7 @@ C1d
 			<td>50</td>
 		</tr>		
 		<tr>
-			<td rowspan="3">sort_tfs_by</td>
+			<td rowspan="3">sort_tfs_by<div class="api-note">(choose one)</div></td>
 			<td>'combined score'</td>
 			<td rowspan="3">'combined score'</td>
 		</tr>
@@ -499,7 +499,7 @@ C1d
 			<td>'rank'</td>
 		</tr>		
 		<tr>
-			<td rowspan="3">sort_kinases_by</td>
+			<td rowspan="3">sort_kinases_by<div class="api-note">(choose one)</div></td>
 			<td>'combined score'</td>
 			<td rowspan="3">'combined score'</td>
 		</tr>
